--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql
+  database: db/development.mysql
   pool: 5
   timeout: 5000
 
@@ -13,15 +13,15 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql
+  database: db/test.mysql
   pool: 5
   timeout: 5000
 
 production:
-    adapter:
+    adapter: mysql
     encoding: utf8
-    database:
-    username:
-    password:
-    host: localhost
+    database: pi
+    username: <%= ENV['DB_USERNAME'] %>
+    password: <%= ENV['DB_PASSWORD'] %>
+    host: <%= ENV['DB_HOSTNAME'] %>
