--- a/config/info.yml
+++ b/config/info.yml
@@ -1,10 +1,10 @@
 <% def env(a, b); e = ENV["obtvse_#{a}"]; e ? e : b; end %>
 
-name:    <%= env :name,    'Full Name' %>
-twitter: <%= env :twitter, 'handle' %>
-github:  <%= env :github,  'username'  %>
-email:   <%= env :email,   'email@example.com'  %>
-about:   <%= env :about,   'Example Tagline That is Longer.' %>
+name:    <%= env :name,    'Pi' %>
+twitter: <%= env :twitter, 'kohwi' %>
+github:  <%= env :github,  'soundcloud/insights'  %>
+email:   <%= env :email,   'insight@soundcloud.com'  %>
+about:   <%= env :about,   'Home of the Insight Team' %>
 
 # Google Analytics
 ga_id:   <%= env :ga,      ''  %>
