--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,12 @@
 /vendor/ruby
 /vendor/cache
 /vendor/bundle/*
+/public/assets/*
 /bin/
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
